<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:id="@+id/statistic_image"
            android:contentDescription="@null"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/first_diff_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/first_diff_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:stretchColumns="1">

            <TableRow>
                <TextView android:padding="8dp" android:text="@string/number_of_games" />
                <TextView android:id="@+id/numb_of_total_games" android:gravity="end" android:padding="8dp" />
            </TableRow>
            <TableRow>
                <TextView android:padding="8dp" android:text="@string/number_of_hints" />
                <TextView android:id="@+id/numb_of_hints" android:gravity="end" android:padding="8dp" />
            </TableRow>
            <TableRow>
                <TextView android:padding="8dp" android:text="@string/total_of_time" />
                <TextView android:id="@+id/numb_of_total_time" android:gravity="end" android:padding="8dp" />
            </TableRow>
            <TableRow>
                <TextView android:padding="8dp" android:text="@string/average_time" />
                <TextView android:id="@+id/first_ava_time" android:gravity="end" android:padding="8dp" />
            </TableRow>
            <TableRow>
                <TextView android:padding="8dp" android:text="@string/min_time" />
                <TextView android:id="@+id/first_min_time" android:gravity="end" android:padding="8dp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>
